# os-panel-qt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user~dceef539a9ae1b8aae349823de1cf4247b90546b  bluetoothapplet.cpp  bluetoothapplet.h  controlcenter.cpp  controlcenter.h  controlcenteritem.cpp  controlcenteritem.h  koompi-os-panel.kdev4  main.cpp  mainwindow.cpp  mainwindow.h  networkservice.cpp  networkservice.h  soundapplet.cpp  timeapplet.cpp  wifiapplet.cpp  wifiapplet.h  wifiitemcontainer.cpp  wifiitemcontainer.h
.kdev4/: koompi-os-panel.kdev4
action-center/: CMakeLists.txt  controlcenter.cpp  controlcenter.h  controlcenteritem.cpp  controlcenteritem.h
airplane-mode/: CMakeLists.txt  airplanecontrol.cpp  airplanecontrol.h
bluetooth/: CMakeLists.txt  Resources.qrc  bluetoothitem.cpp  bluetoothitem.h  bluetoothscaner.cpp  bluetoothscaner.h  bluetoothservice.cpp  bluetoothservice.h  bluetoothui.cpp  bluetoothui.h  bluewizard.cpp  bluewizard.h  pairing.cpp  pindisplay.cpp  process.cpp  process.h  wizardagent.cpp  wizardagent.h
brightness/: CMakeLists.txt  bluelight.cpp  bluelight.h  brightness.cpp  brightness.h
cmake/: BuildPlugin.cmake
display/: CMakeLists.txt  controldisplay.cpp  controldisplay.h  displayui.cpp  displayui.h
koompi-panel/: CMakeLists.txt  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  timeapplet.cpp  timeapplet.h
locale-control/: CMakeLists.txt  localeconfig.cpp  localeconfig.h  localecontrol.cpp  localecontrol.h  localeui.cpp  localeui.h
nightmode/: CMakeLists.txt  nightmodecontrol.cpp  nightmodecontrol.h
panel/: CMakeLists.txt  ilxqtpanel.h  ilxqtpanelplugin.h  lxqtpanel.cpp  lxqtpanelapplication.h  lxqtpanellayout.cpp  main.cpp  plugin.cpp  plugin.h  pluginmoveprocessor.cpp
panel/config/: addplugindialog.cpp  configpanelwidget.cpp  configpanelwidget.h
plugin-actioncenter/: CMakeLists.txt  actionbutton.h  actionbuttonstyle.h  actioncenterhome.cpp  actioncenterhome.h  actioncenterui.h  actiondatetime.cpp  actiondatetime.h  actionsmbutton.h  airplanecontrol.cpp  airplanecontrol.h  displayconfig.cpp  displayconfig.h  kmpactioncenter.cpp  kmpactioncenter.h  kmpactioncenterpopup.cpp  kmpactioncenterpopup.h  kmpactioncenterview.cpp  kmpactioncenterview.h  kmpcontrolcenteritem.cpp  kmpcontrolcenteritem.h  sessionbutton.h  userprofile.cpp  userprofile.h
plugin-actioncenter/airplane/: airplaneconfig.cpp  airplaneconfig.h
plugin-actioncenter/bluetooth/: bluetooth.cpp  bluetooth.h  bluetoothservice.cpp  bluetoothservice.h  bluetoothui.h  customitem.cpp  customitem.h
plugin-actioncenter/brightness/: bluelight.cpp  brightness.cpp  brightness.h
plugin-actioncenter/display/: displayUi.cpp  displayUi.h  displayconfig.cpp  displayconfig.h  displaycontrol.cpp  displaycontrol.h  displayui.cpp  displayui.h
plugin-actioncenter/locale/: localeUi.h  localeconfig.cpp  localeconfig.h  localecontrol.cpp  localecontrol.h
plugin-actioncenter/nightmode/: nightmodeconfig.cpp  nightmodeconfig.h
plugin-actioncenter/resources/: actioncenter.desktop.in
plugin-mainmenu/: CMakeLists.txt  lxqtmainmenu.cpp  lxqtmainmenu.h
plugin-taskbar/: CMakeLists.txt  lxqttaskbarplugin.cpp
plugin-taskbar/resources/: taskbar1.desktop.in
sound/: CMakeLists.txt  soundapplet.h  soundservice.cpp  soundservice.h
wireless-fidelity/: CMakeLists.txt  networkservice.cpp  wifiapplet.cpp  wifiapplet.h  wifiitemcontainer.cpp  wifiitemcontainer.h  wifiitemmodel.cpp  wifiitemmodel.h
